Bug 152898 - Tools - Options - LibreOffice - View - Visibility - Shortcuts not indicative that it only affects shortcut display in context menus
Summary: Tools - Options - LibreOffice - View - Visibility - Shortcuts not indicative ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 inReleaseNotes:7.6
Keywords: needsUXEval
Depends on:
Blocks: Options-Dialog-View
  Show dependency treegraph
 
Reported: 2023-01-06 07:56 UTC by lvm
Modified: 2023-08-28 07:44 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lvm 2023-01-06 07:56:39 UTC
LO ignores shortcut visibility setting (tools-options-libreoffice-view-visibility-shortcuts) and always shows them only when alt is pressed. Expected behaviour is when this settings=show menu shortcuts e.g. F in File in the main menu is always underlined, and when it is =hide is never underlined. Both main and drop-down menus are affected.


Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded
Comment 1 Buovjaga 2023-03-17 13:07:43 UTC
The option only affects keyboard shortcuts displayed in context menus (like Ctrl+Something), see bug 74377

Let's ask UX about the naming
Comment 2 lvm 2023-03-17 14:05:07 UTC
Ok, but this setting has no effect on context menus either. As far as I can see the behaviour of accelerators (shortcuts) in context menus is consistent with the same in the main menu and on windows and on linux with vcl=x11 they are shown all the time - this is the behaviour I am trying to get on KDE but with vcl=kf5 they are shown only after alt is pressed. And with vcl=gtk3 they are shown about half a second after alt is pressed - this is really annoying.
Comment 3 Buovjaga 2023-03-17 14:16:07 UTC
(In reply to lvm from comment #2)
> Ok, but this setting has no effect on context menus either. As far as I can
> see the behaviour of accelerators (shortcuts) in context menus is consistent
> with the same in the main menu and on windows and on linux with vcl=x11 they
> are shown all the time - this is the behaviour I am trying to get on KDE but
> with vcl=kf5 they are shown only after alt is pressed. And with vcl=gtk3
> they are shown about half a second after alt is pressed - this is really
> annoying.

It's not about accelerators, but the hints for keyboard shortcuts.
Comment 4 Buovjaga 2023-03-17 14:17:00 UTC
The accelerator behaviour comes from the operating system and is respected.
Comment 5 lvm 2023-03-19 11:25:30 UTC
So it does and changing the global default setting fixed the issue. Closing.
Comment 6 Buovjaga 2023-03-19 11:44:56 UTC
Let's keep this open as the label is a UX issue
Comment 7 Heiko Tietze 2023-03-20 08:49:39 UTC
I expect with Shortcuts=Hide all descriptive text like "Save (Ctrl+S)" to be gone so the label would be just "Save". It's not happening for gen, gtk3, gtk4, kf5, and qt6 and the "Ctrl+S" hint remain always visible.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef1ffdc3087853ac94847d0c8fec8717feb62224
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

UX-wise I see no issue with "Shortcut", at least after reading the online help. 

And btw. the mnemonic is always visible for gen and qt6.
Comment 8 Buovjaga 2023-03-20 09:08:35 UTC
(In reply to Heiko Tietze from comment #7)
> I expect with Shortcuts=Hide all descriptive text like "Save (Ctrl+S)" to be
> gone so the label would be just "Save". It's not happening for gen, gtk3,
> gtk4, kf5, and qt6 and the "Ctrl+S" hint remain always visible.

The option only affects context menus, not menus. So the question here for UX is: do we rename it to "Shortcuts in context menus" or what?
Comment 9 lvm 2023-03-20 09:12:00 UTC
On  kf5/7.5.1.2 this option works but affects only context right-click menus, not main menus, and judging by the comment #1 this is by design. Extending it to main menu could be a good idea.

Also I am not quite clear as to what "Automatic" setting is supposed to do. As far as I can tell it has the same effect as "Show" and therefore redundant.
Comment 10 Heiko Tietze 2023-03-20 09:15:19 UTC
(In reply to Buovjaga from comment #8)
> The option only affects context menus...

I see, a ridiculous function again. Renaming it to something longer breaks the UI (downside of the label left of the control layout is that we need to aim for string with similar length). My take: move this option and the menu icons into the expert settings. Or make it work for the main menu too.
Comment 11 Caolán McNamara 2023-03-20 09:39:22 UTC
This used to be called "Shortcuts in context menus:" before

commit 342a759dae8c58f2256e5aa92e1d27fd4a3601c7
Date:   Mon Nov 11 22:52:37 2019 +0100

    tdf#128721 Options -> View Dialog update


and "Shortcuts in context menus:" was added originally with

commit 74fd959945dbbfbc3dcc331a08ff8fc7c6410295
Date:   Wed Sep 14 02:02:38 2016 +0300

    tdf#74377 Keyboard shortcuts for context menus

so its all doing what it was intended to do, but got relabeled to suggest something more general along the way.

I'm in favour of making less of our horde of options visible to the user though
Comment 12 Maxim Monastirsky 2023-03-20 09:51:55 UTC
The assumption while implementing Bug 74377 was that the main menu supposed to always show the shortcuts, as is the case in any other app and any OS, and there is no use in allowing to disable this. This is unlike context menus which e.g. shouldn't have shortcuts according to Apple's HIG, and used to not have shortcuts back in gtk2 (and early gtk3) days.

(In reply to lvm from comment #9)
> Also I am not quite clear as to what "Automatic" setting is supposed to do.
> As far as I can tell it has the same effect as "Show" and therefore
> redundant.
Automatic means "follow the current platform default", i.e. it defaults to "Hide" for macOS and gtk3.
Comment 13 Caolán McNamara 2023-03-20 10:17:48 UTC
yeah, which is desirable from my POV. I think just following the DE out of the box and not offer the option in dialogs to change it (but leave it configurable via export config) is the easiest thing to do
Comment 14 Commit Notification 2023-03-20 11:38:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/770eea32b68a95e493a86a97eba5003c46ed736b

tdf#152898 remove "show context menu shortcuts" from options page

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Heiko Tietze 2023-03-20 14:06:07 UTC
(In reply to Caolán McNamara from comment #13)
> yeah, which is desirable from my POV. I think just following the DE out of
> the box and not offer the option in dialogs to change it (but leave it
> configurable via export config) is the easiest thing to do

At least one of the gtk versions hide the icon option and I wonder if the frame remains visible in this case without any content.
Comment 16 Caolán McNamara 2023-03-20 14:44:50 UTC
The frame "frame3" is gone completely now.
Comment 17 stragu 2023-08-28 07:44:13 UTC
I mentioned it as deprecated in the release notes. Not sure if something should be said about the GTK icons though?

https://wiki.documentfoundation.org/index.php?title=ReleaseNotes%2F7.6&type=revision&diff=683666&oldid=682844

Note that we still have a leftover UI hint in https://opengrok.libreoffice.org/xref/core/officecfg/registry/schema/org/openoffice/Office/Common.xcs?r=3d8b7fd3#2740