tdf#152898 remove "show context menu shortcuts" from options page

Change-Id: I44acae51ca72ece735f264e826f8d254e85be8f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149148
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>